--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@graphql-codegen/cli": "^2.11.3",
     "graphql": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,6 +21,11 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "@graphql-codegen/typescript": "2.7.2",
+    "@graphql-codegen/typescript-react-apollo": "3.3.2",
+    "@graphql-codegen/typescript-operations": "2.5.2",
+    "@graphql-codegen/introspection": "2.2.0",
+    "@graphql-codegen/cli": "2.11.3"
   }
 }
