--- a/codegen.yml
+++ b/codegen.yml
@@ -1,11 +1,11 @@
 overwrite: true
 schema: 'http://localhost:4000'
+documents: './src/**/*.graphql'
 generates:
   src/generated/graphql.tsx:
     plugins:
       - 'typescript'
       - 'typescript-operations'
       - 'typescript-react-apollo'
-  ./graphql.schema.json:
-    plugins:
-      - 'introspection'
+    config:
+      withHooks: true
