--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "vite-react-ts-graphql",
+  "name": "graphql-monorepo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "yarn workspace frontend codegen",
+    "dev-front": "yarn workspace frontend dev",
+    "dev-back": "yarn workspace backend dev"
   },
-  "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "graphql": "^16.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yukinissie/vite-react-ts-graphql.git"
   },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^2.11.3",
-    "@graphql-codegen/typescript": "^2.7.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yukinissie/vite-react-ts-graphql/issues"
+  },
+  "homepage": "https://github.com/yukinissie/vite-react-ts-graphql#readme",
+  "workspaces": [
+    "frontend",
+    "backend"
+  ]
 }
