--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "codegen": "yarn workspace frontend codegen",
     "dev-front": "yarn workspace frontend dev",
-    "dev-back": "yarn workspace backend dev"
+    "dev-back": "yarn workspace backend generate && yarn workspace backend dev"
   },
   "repository": {
     "type": "git",
